<?xml version="1.0" encoding="utf-8"?>
<!-- EST SB Smart Attendance - Splash Screen Layout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:gravity="center">

    <!-- Center content -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Logo container with white circle background -->
        <FrameLayout
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:background="@drawable/qr_container_bg"
            android:padding="15dp">

            <ImageView
                android:id="@+id/splashLogo"
                android:layout_width="@dimen/logo_image_size"
                android:layout_height="@dimen/logo_image_size"
                android:layout_gravity="center"
                android:contentDescription="@string/institution_short"
                android:src="@drawable/logo_est_sb" />
        </FrameLayout>

        <!-- App title -->
        <TextView
            android:id="@+id/splashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxl"
            android:alpha="0"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.1"
            android:text="@string/institution_short"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h1" />

        <!-- App subtitle -->
        <TextView
            android:id="@+id/splashSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:alpha="0"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.05"
            android:text="@string/smart_attendance"
            android:textColor="@color/glowBlue"
            android:textSize="@dimen/text_body_large" />

    </LinearLayout>

    <!-- Footer -->
    <TextView
        android:id="@+id/splashFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/spacing_xxxl"
        android:alpha="0"
        android:fontFamily="sans-serif-medium"
        android:text="@string/institution_name"
        android:textColor="#80FFFFFF"
        android:textSize="@dimen/text_caption" />

</RelativeLayout>
